# godot_rapier

./: Cargo.toml  README.md
examples/godot_vs_rapier/: default_rapier_collider.tres  fps_label.gd  godot_world.tscn  icon.svg.import  project.godot  rapier_godot_visual_comparison.tscn  rapier_world_3d.tscn  root.tscn
examples/godot_vs_rapier/worlds/: godot_world.tscn  rapier_world_3d.tscn
src/: godot_node_ref.rs  lib.rs  rapier_collider_descriptor.rs  rapier_physics_world.rs  rapier_world_3d.rs
